# estudo_AIRFLOW

./: .env-ex  .gitignore  README.md  docker-compose.yaml  pyproject.toml  start-airflow.sh
dags/basico/: executando_taks.py  exemplo_python.py  formas_de_declarar_dags.py
dags/basico/Dependências_de_Tarefas/: bitshift.py  chain.py  chain_dinamico.py  cross_downstream.py  dependências_de_tarefas.md  set_downstream_e_set_upstream.py
dags/basico/hello_world/: exemplo_hello_world.py
