[project]
name = "estudo-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardo",email = "leonardoaugusto1000a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
